# CryptoWallet

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  conftest.py  docker-compose.dev.yml  docker-compose.overriden.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.py  init_scripts.py  main.py  pyproject.toml
admin/: auth.py
admin/templates/: login.html
config/: settings.py
config_celery/: celery.py  celery_app.py
config_fastapi/: app.py  fastapi_mgr.py  middleware.py
config_propan/: app.py
config_socketio/: app.py  connect.py  connect_to_chat.py  consumers.py  google_requests.py  socket_app.py
docker/socketio/: Dockerfile
migrations/: env.py
migrations/versions/: 0ee821785517_migration.py  22140d47825f_migration.py  23a43d08cdbe_migration.py  3a95f7480f31_migration.py  45a3ce562675_migration.py  500d27676e16_init.py  7f437c661ec1_migration.py  916838b49eed_migration.py  a4f93516a1ef_migration.py  a5280c52915c_migration.py  d1f6fc19a688_migration.py  dfe52b4a1416_migration.py  e002dc7a9e41_migration.py  e8304159654a_migration.py  ec0ea6531138_migration.py  f69429574d70_migration.py
src/auth/: containers.py  endpoints.py  repository.py  schemas.py  tasks.py  views.py
src/auth/dependencies/: jwt_aut.py
src/auth/services/: auth.py  send_mail.py
src/auth/tests/: tests_auth.py
src/boto3/: boto3_service.py  schemas.py
src/celery/: auth_tasks.py  chat_access_tasks.py  parse_tasks.py  user_tasks.py  wallet_tasks.py
src/chat/: containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/chat/asyncapi/: generator.py  html_fixer.py  schemas.py
src/chat/services/: chat.py
src/chat/tests/: tests_chat.py
src/core/: __init__.py  base_status.py  containers.py  db.py  register.py  routers.py
src/delivery/: consumers.py  containers.py  endpoints.py  models.py  order_status.py  repository.py  schemas.py
src/delivery/services/: delivery.py
src/delivery/tests/: tests_delivery.py
src/ibay/: containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/ibay/services/: ibay.py
src/ibay/tests/: tests_ibay.py
src/parser/: consumers.py  containers.py  endpoints.py  models.py  repository.py
src/parser/services/: block_parser.py
src/users/: containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/users/services/: user.py
src/users/tests/: tests_users.py
src/wallet/: consumers.py  containers.py  endpoints.py  models.py  repository.py  schemas.py  views.py
src/wallet/services/: wallet.py
src/wallet/tests/: tests_wallet.py
src/web3/: containers.py  repository.py  w3_service.py
static/: package-lock.json  webpack.config.js
static/assets/js/: app-chat.js  pages-auth.js
static/html-starter/horizontal-menu-template-no-customizer/: index.html  page-2.html
static/js/: template-customizer.js
templates/: auth_login.html  base.html  base_auth.html  chat.html  ibay.html  index.html  profile.html  registration.html  wallets.html
templates/asyncapi/: index.html
utils/base/: decode_data.py  format_date.py  get_user_bearer.py  parse_data_transaction.py
utils/security/: base.py
(+374 files in other folders)
