[tool.poetry]
name = "CryptoWallet"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name spogins@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.3.3"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
httpx = "^0.24.1"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
propan = "^0.1.5.23"
uvicorn = "^0.23.2"
dependency-injector = "^4.41.0"
fastapi-socketio = "^0.0.10"
django-environ = "^0.11.1"
sqlalchemy-utils = "^0.41.1"
eth-account = "^0.9.0"
web3 = "^6.9.0"
asyncpg = "^0.28.0"
aio-pika = "^9.2.2"
passlib = "^1.7.4"
email-validator = "^2.0.0.post2"
asgiref = "^3.7.2"
fastapi-mail = "^1.4.1"
boto3 = "^1.28.39"
redis = "^5.0.0"
pyjwt = "^2.8.0"
alembic = "^1.12.0"

[tool.pytest.ini_options]
testpaths = [
    "src/auth/tests/tests_auth.py"
]
asyncio_mode="auto"

